--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -19,7 +19,7 @@ jobs:
           go-version: 1.20
 
       - name: Install dependencies
-        run: go mod download
+        run: go mod tidy
 
       - name: Run tests and coverage
         run: |
