--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -15,9 +15,8 @@ jobs:
 
       - name: Set up Go
         uses: actions/setup-go@v3
-
-      - name: Install dependencies
-        run: go mod tidy
+        with:
+          go-version: 1.20
 
       - name: Run tests and coverage
         run: |
