--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_TEST_REPORTER_ID }}
         with:
-          coverageCommand: codeclimate analyze-coverage --input=coverage.out --language=go
+          coverageLocations: coverage.out:gocov
           debug: false
 
       - name: Cleanup
