--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -24,14 +24,14 @@ jobs:
       - name: Run tests and coverage
         run: |
           go test -race -coverprofile=coverage.out ./...
+          gocov convert coverage.out > coverage.json
 
       - name: Upload coverage to CodeClimate
         uses: paambaati/codeclimate-action@v3.2.0
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_TEST_REPORTER_ID }}
         with:
-          coverageCommand: gocov convert coverage.out > coverage.json
-          coverageLocations: coverage.json:gocov
+          coverageCommand: gocov convert coverage.out
           debug: false
 
       - name: Cleanup
