--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -18,20 +18,16 @@ jobs:
         with:
           go-version: 1.20.1
 
-      - name: Install gocov
-        run: go install github.com/axw/gocov/gocov@latest
-
       - name: Run tests and coverage
         run: |
           go test -race -coverprofile=coverage.out ./...
-          gocov convert coverage.out > coverage.json
 
       - name: Upload coverage to CodeClimate
         uses: paambaati/codeclimate-action@v3.2.0
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_TEST_REPORTER_ID }}
         with:
-          coverageLocations: coverage.json:gocov
+          coverageLocations: coverage.out:gocov
           debug: false
 
       - name: Cleanup
