--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -7,12 +7,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Setup Go
         uses: actions/setup-go@v3
-      - name: Install dependencies
-        run: go mod tidy
+        with:
+          go-version: 1.20.1
+
       - name: Test
         run: go test -v ./...
+
       - name: Update coverage report
         uses: ncruces/go-coverage-report@main
         if: |
