--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -12,13 +12,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.20.1
-
-      - name: Test
-        run: go test -v ./...
-
-      - name: Update coverage report
-        uses: ncruces/go-coverage-report@main
-        if: |
-          matrix.os == 'ubuntu-latest' &&
-          github.event_name == 'push'
-        continue-on-error: true
+      - name: Run coverage
+        run: go test -race -coverprofile=coverage.txt -covermode=atomic
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
